--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
-// This tells GitHub how to build the Android project
+// Remove the buildscript and allprojects blocks that have repositories inside
 buildscript {
-    repositories { google(); mavenCentral() }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10"
     }
 }
 
-allprojects {
-    repositories { google(); mavenCentral() }
+// Keep this part if you have it, but do NOT put a "repositories" block here
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
