--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,16 @@
 buildscript {
-    // DO NOT put a repositories {} block here
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10"
     }
+}
+
+// This block stays empty to avoid the conflict you had earlier
+allprojects {
 }
 
 task clean(type: Delete) {
