--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Build Native APK
-# This replaces 'on: [push]' so it ONLY runs when you click the button
 on: 
   workflow_dispatch:
 
@@ -18,12 +17,13 @@ jobs:
           cache: 'gradle'
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@v3
         with:
           gradle-version: 8.4
 
       - name: Build Debug APK
-        run: gradle assembleDebug
+        # We run with --no-daemon to ensure a fresh, clean build every time
+        run: gradle assembleDebug --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
